--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="hero">
             <div class="hero-left">
                 <p class="tagline">WE DESIGN UI/UX & BUILD BRANDS</p>
-                <h1>Hi, I am <span>DILLIRAJA</span> <br>I build responsive & modern websites and mobile UI/UX design.</h1>
+                <h1>Hi, I am <span>DILLIRAJA</span> <br>a creative UI/UX designer focused on user-friendly and impactful designs</h1>
                 <div class="buttons">
                     <a href="#" class="btn primary">Hire me</a>
                     <a href="./assets/dilliraja resume.pdf" class="btn outline" download>Download CV</a>
@@ -63,7 +63,7 @@
                         design environment.
                     </p>
 
-                    <p><em>“UI-User Interface is See how look and UX-User Exprience its a feeling”</em></p>
+                    <p><em>“Creating designs that users love”</em></p>
 
 
                     <div class="about-details">
