--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div class="project-info">
                     <h3>To do list app</h3>
                     <p>Figma </p>
-                    <a href="https://www.figma.com/proto/c7dNIhF22HfEQNKO225oN0?node-id=1-2" target="_blank">View Project</a>
+                    <a href="https://www.behance.net/gallery/233529173/To-do-list" target="_blank">View Project</a>
                 </div>
             </div>
 
