--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             const form = event.target;
 
             // Replace this with your FormSubmit endpoint
-            const formAction = "https://formsubmit.co/dilliraja20et03@gmail.com";
+            const formAction = "https://formsubmit.co/54f5513c19e3ffbc9f7672299f5a497c";
 
             const formData = new FormData(form);
             fetch(formAction, {
