--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             const form = event.target;
 
             // Replace this with your FormSubmit endpoint
-            const <form action="https://formsubmit.co/54f5513c19e3ffbc9f7672299f5a497c" method="POST">
+            const formaction="https://formsubmit.co/54f5513c19e3ffbc9f7672299f5a497c";
             const formData = new FormData(form);
             fetch(formAction, {
                 method: "POST",
