--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <footer class="footer">
         <div class="footer-container">
             <h3>DILLIRAJA UI/UX Designer</h3>
-            <p>Crafting frontend experiences with creativity ✨</p>
+            <p>Designing simple, intuitive, and meaningful digital experiences.✨</p>
             <div class="social-icons">
                 <a href="https://github.com/Imdilliraja" target="_blank" title="GitHub Profile">
                     <i class="fab fa-github"></i>
